# InACTually-Engine

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md
3rd/: AudioDrawUtils.cpp  k4a2mat.hpp
3rd/CameraList_MSMF/: Camera_MSMF.cpp  Camera_MSMF.h
3rd/Cinder-PortAudio/: README.md
3rd/Cinder-WebSocketPP/: LICENSE
3rd/ImPlot/: implot_internal.h
3rd/OSC/: LICENSE
3rd/Simple-WebSocket-Server/: .gitignore  CMakeLists.txt
3rd/Simple-WebSocket-Server/tests/: CMakeLists.txt
3rd/dmx/: DMXPro.cpp  DMXPro.hpp  LICENSE
3rd/filter/: Filter.hpp  OneEuroFilter.hpp
3rd/imnodes/: imnodes.cpp  imnodes.h  imnodes_internal.h
3rd/onnxruntime/: CodeSignSummary-94c22bc7-1645-4f4d-95b8-59266cba5ad7.md
3rd/smbPitchShift/: smbPitchShift.cpp  smbPitchShift.h
assets/: bodies.json
assets/certs/: cmds.txt  inactually.crt  inactually.csr  inactuallyCA.crt  inactuallyCA.key  inactuallyCA.srl
assets/dmx/: fixtures.json
design/: icon.afdesign  splash.afdesign
include/audio/: AudioDeviceListener.hpp  AudioDeviceManager.hpp  AudioPlayer.hpp  TimeStretchingNode.hpp
include/computing/: CameraCalibrator.hpp  DepthDetector.hpp  DetectorBase.hpp  MarkerDetector.hpp  ObjectDetector.hpp
src/: InACTuallyApp.cpp
vc2022/: IA_3rd.vcxproj  IA_3rd.vcxproj.filters  IA_Experimental.filters  IA_Experimental.vcxproj  IA_Processing.vcxproj  IA_Processing.vcxproj.filters  IA_Room.vcxproj  IA_Room.vcxproj.filters  IA_System.vcxproj  IA_System.vcxproj.filters  InACTually.sln  InACTually.vcxproj  InACTually.vcxproj.filters  Resources.rc  packages.config
(+313 files in other folders)
